# kattis

./: .gitignore  13floors.py  README.md  jointjogjam.py  listgame.py  pyproject.toml  python-tests.yml
.github/workflows/: python-tests.yml
src/: 3dprinter.py  anewalphabet.py  different.py
src/kattis/: astackofgold.py  floors.py  lvable.py  rationalsequence2.py
tests/: test_floors.py  test_lvable.py  test_printer.py
