[tool.poetry]
name = "kattis"
version = "0.1.0"
description = "Solutions to Kattis / CheckIO problems"
authors = ["Clement Martin <clement.martin2.etu@univ-lille.fr>"]
readme = "README.md"
packages = [{ include = "kattis", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
